--- a/app/index.html
+++ b/app/index.html
@@ -14,28 +14,93 @@
     <title>MHB</title>
 
     <style>
-      .app-loader {
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 100px;
-        border: 5px solid #dddddd;
-        border-radius: 50%;
-        border-top: 5px solid #5d1049;
+      .lds-roller {
+        margin: 2em auto;
         width: 40px;
         height: 40px;
-        -webkit-animation: spin 0.6s linear infinite; /* Safari */
-        animation: spin 0.6s linear infinite !important;
+        position: relative;
       }
-      /* Safari */
-      @-webkit-keyframes spin {
-        0% {
-          -webkit-transform: rotate(0deg);
-        }
-        100% {
-          -webkit-transform: rotate(360deg);
-        }
+      .lds-roller div {
+        animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+        -webkit-transform-origin: 40px 40px;
+        -ms-transform-origin: 40px 40px;
+        transform-origin: 40px 40px;
       }
-      @keyframes spin {
+      .lds-roller div:after {
+        content: " ";
+        display: block;
+        position: absolute;
+        width: 7px;
+        height: 7px;
+        border-radius: 50%;
+        background: #5d1049;
+        margin: -4px 0 0 -4px;
+      }
+      .lds-roller div:nth-child(1) {
+        -webkit-animation-delay: -0.036s;
+        animation-delay: -0.036s;
+      }
+      .lds-roller div:nth-child(1):after {
+        top: 63px;
+        left: 63px;
+      }
+      .lds-roller div:nth-child(2) {
+        -webkit-animation-delay: -0.072s;
+        animation-delay: -0.072s;
+      }
+      .lds-roller div:nth-child(2):after {
+        top: 68px;
+        left: 56px;
+      }
+      .lds-roller div:nth-child(3) {
+        -webkit-animation-delay: -0.108s;
+        animation-delay: -0.108s;
+      }
+      .lds-roller div:nth-child(3):after {
+        top: 71px;
+        left: 48px;
+      }
+      .lds-roller div:nth-child(4) {
+        -webkit-animation-delay: -0.144s;
+        animation-delay: -0.144s;
+      }
+      .lds-roller div:nth-child(4):after {
+        top: 72px;
+        left: 40px;
+      }
+      .lds-roller div:nth-child(5) {
+        -webkit-animation-delay: -0.18s;
+        animation-delay: -0.18s;
+      }
+      .lds-roller div:nth-child(5):after {
+        top: 71px;
+        left: 32px;
+      }
+      .lds-roller div:nth-child(6) {
+        -webkit-animation-delay: -0.216s;
+        animation-delay: -0.216s;
+      }
+      .lds-roller div:nth-child(6):after {
+        top: 68px;
+        left: 24px;
+      }
+      .lds-roller div:nth-child(7) {
+        -webkit-animation-delay: -0.252s;
+        animation-delay: -0.252s;
+      }
+      .lds-roller div:nth-child(7):after {
+        top: 63px;
+        left: 17px;
+      }
+      .lds-roller div:nth-child(8) {
+        -webkit-animation-delay: -0.288s;
+        animation-delay: -0.288s;
+      }
+      .lds-roller div:nth-child(8):after {
+        top: 56px;
+        left: 12px;
+      }
+      @keyframes lds-roller {
         0% {
           transform: rotate(0deg);
         }
@@ -57,7 +122,16 @@
     <!-- The app hooks into this div -->
     <div id="app">
       <div style="min-height: 620px; text-align: center;">
-        <div class="app-loader"></div>
+        <div class="lds-roller">
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
         <br />
         <p>Please wait, we're setting up things for you.</p>
       </div>
