google font added

--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,11 @@
 
     <!-- Allow installing the app to the homescreen -->
     <meta name="mobile-web-app-capable" content="yes" />
-
+    <link
+      href="https://fonts.googleapis.com/css?family=Oswald"
+      rel="stylesheet"
+      type="text/css"
+    />
     <link rel="icon" href="/favicon.ico" />
     <title>MHB</title>
 
@@ -27,7 +31,7 @@
         transform-origin: 40px 40px;
       }
       .lds-roller div:after {
-        content: " ";
+        content: ' ';
         display: block;
         position: absolute;
         width: 7px;
