favicon address changed

--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="common/images/favicon.ico" />
     <title>MHB</title>
 
     <style>
